[gd_scene load_steps=7 format=3 uid="uid://j0hv8e2cyy28"]

[ext_resource type="Script" path="res://Main.gd" id="1_8rjyb"]
[ext_resource type="Script" path="res://ComputeGalaxy.gd" id="2_2v1uu"]
[ext_resource type="Script" path="res://PerfGraph.gd" id="2_to6eg"]
[ext_resource type="Script" path="res://LabelFPS.gd" id="3_vn4o5"]
[ext_resource type="Script" path="res://LabelDelta.gd" id="4_5eyq0"]
[ext_resource type="Script" path="res://LabelPoints.gd" id="4_no4lm"]

[node name="Main" type="Node2D"]
script = ExtResource("1_8rjyb")

[node name="SubViewportContainerPerfGraph" type="SubViewportContainer" parent="."]
unique_name_in_owner = true
visible = false
offset_right = 950.0
offset_bottom = 950.0

[node name="SubViewportPerfGraph" type="SubViewport" parent="SubViewportContainerPerfGraph"]
unique_name_in_owner = true
handle_input_locally = false
size = Vector2i(950, 950)
render_target_update_mode = 0

[node name="PerfGraph" type="TextureRect" parent="SubViewportContainerPerfGraph/SubViewportPerfGraph"]
unique_name_in_owner = true
script = ExtResource("2_to6eg")

[node name="ComputeGalaxy" type="TextureRect" parent="."]
unique_name_in_owner = true
offset_left = -24.0
offset_top = -24.0
offset_right = 16.0
offset_bottom = 16.0
scale = Vector2(0.5, 0.5)
script = ExtResource("2_2v1uu")

[node name="LabelFPS" type="Label" parent="."]
offset_left = 14.0
offset_top = 15.0
offset_right = 54.0
offset_bottom = 38.0
text = "FPS"
script = ExtResource("3_vn4o5")

[node name="LabelPoints" type="Label" parent="."]
offset_left = 15.0
offset_top = 41.0
offset_right = 55.0
offset_bottom = 64.0
text = "pts"
script = ExtResource("4_no4lm")

[node name="LabelDelta" type="Label" parent="."]
offset_left = 824.0
offset_top = 39.0
offset_right = 864.0
offset_bottom = 62.0
text = "dt"
script = ExtResource("4_5eyq0")

[node name="HSliderTimeScale" type="HSlider" parent="."]
unique_name_in_owner = true
offset_left = 85.0
offset_top = 13.0
offset_right = 928.0
offset_bottom = 44.0
min_value = -3.0
max_value = 20.0
value = 1.0
ticks_on_borders = true

[node name="SubViewportContainerZoom" type="SubViewportContainer" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(0.635294, 0.635294, 0.635294, 1)
offset_left = 700.0
offset_top = 700.0
offset_right = 950.0
offset_bottom = 950.0

[node name="SubViewportZoom" type="SubViewport" parent="SubViewportContainerZoom"]
unique_name_in_owner = true
handle_input_locally = false
size = Vector2i(250, 250)
render_target_update_mode = 0

[node name="CanvasModulate" type="CanvasModulate" parent="SubViewportContainerZoom/SubViewportZoom"]
position = Vector2(703, 708)

[node name="ButtonGalaxy" type="Button" parent="."]
offset_left = 922.0
offset_top = 540.0
offset_right = 930.0
offset_bottom = 548.0
text = "G"

[node name="ButtonPerfGraph" type="Button" parent="."]
offset_left = 922.0
offset_top = 600.0
offset_right = 940.0
offset_bottom = 631.0
text = "P"

[node name="ButtonZoom" type="Button" parent="."]
offset_left = 922.0
offset_top = 660.0
offset_right = 940.0
offset_bottom = 691.0
text = "Z"

[connection signal="pressed" from="ButtonGalaxy" to="." method="_on_button_galaxy_pressed"]
[connection signal="pressed" from="ButtonPerfGraph" to="." method="_on_button_perf_graph_pressed"]
[connection signal="pressed" from="ButtonZoom" to="." method="_on_button_zoom_pressed"]
